--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -2,6 +2,15 @@
 $body-bg: #f8fafc;
 
 // Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
+$font-family-sans-serif: "Nunito", sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
+
+$primary: #84b1d8;
+$secondary: #ffe1e1;
+
+$theme-colors: (
+    "primary": $primary,
+    "secondary": $secondary,
+);
+
