--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -8,9 +8,11 @@ $line-height-base: 1.6;
 
 $primary: #84b1d8;
 $secondary: #ffe1e1;
+$danger : #dc3545;
 
 $theme-colors: (
     "primary": $primary,
     "secondary": $secondary,
+    "danger" : $danger,
 );
 
