information add edit

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -9,10 +9,12 @@ $line-height-base: 1.6;
 $primary: #84b1d8;
 $secondary: #ffe1e1;
 $danger : #dc3545;
+$success: #67daa4c4;
 
 $theme-colors: (
     "primary": $primary,
     "secondary": $secondary,
     "danger" : $danger,
+    "success":  $success,
 );
 
